qsk-macros/tests/fail/analyze/invalid-key-code-keymap-key.rs
use qsk_macros::remap;

fn main() {
    remap!(
        ModLayer: {
            MEOW -> F,
        },
    );
}
