qsk-macros/tests/fail/analyze/invalid-key-code-keymap-key.stderr
error: invalid key code when converting parse::Key to KeyCode: VariantNotFound
 --> tests/fail/analyze/invalid-key-code-keymap-key.rs:6:13
  |
6 |             MEOW -> F,
  |             ^^^^
